<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:paddingBottom="0dp"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    style="@style/mainStyle"
    tools:context="smikhlevskiy.uafinance.UI.MainActivity">


    <LinearLayout
        android:id="@+id/hiderLayout"
        style="@style/minMaxCurrinceStyle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/spinerCity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.45"></Spinner>


        <Spinner
            android:id="@+id/spinerCurrency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"></Spinner>

        <Spinner
            android:id="@+id/spinerAskBid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.15"></Spinner>

    </LinearLayout>


    <GridLayout
        android:id="@+id/curGridLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/minMaxCurrinceStyle"
        android:layout_alignParentBottom="true"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:text="@string/currancie" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:text="@string/ask" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:text="@string/bid" />
        <!--   USD    -->
        <TextView
            android:id="@+id/USD_cur_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/custom_vertical_margin"
            android:layout_row="1"
            android:text="@string/USD" />

        <TextView
            android:id="@+id/USD_bid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/custom_vertical_margin"
            android:layout_row="1"
            android:text="@string/nullvall" />

        <TextView
            android:id="@+id/USD_ask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/custom_vertical_margin"
            android:layout_row="1"
            android:text="@string/nullvall" />

        <!--   EUR    -->
        <TextView
            android:id="@+id/EUR_cur_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/custom_vertical_margin"
            android:layout_row="2"
            android:text="@string/EUR" />

        <TextView
            android:id="@+id/EUR_bid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/custom_vertical_margin"
            android:layout_row="2"
            android:text="@string/nullvall" />

        <TextView
            android:id="@+id/EUR_ask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/custom_vertical_margin"
            android:layout_row="2"
            android:text="@string/nullvall" />

        <!--   RUB    -->
        <TextView
            android:id="@+id/RUB_cur_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/custom_vertical_margin"
            android:layout_row="3"
            android:text="@string/RUB" />

        <TextView
            android:id="@+id/RUB_bid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/custom_vertical_margin"
            android:layout_row="3"
            android:text="@string/nullvall" />

        <TextView
            android:id="@+id/RUB_ask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/custom_vertical_margin"
            android:layout_row="3"
            android:text="@string/nullvall" />

    </GridLayout>

    <ListView

        android:id="@+id/listViewBanks"
        style="@style/listStyle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/curGridLayout"
        android:layout_below="@id/hiderLayout"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
>


    </ListView>

</RelativeLayout>
