<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    style="@style/mainStyle"
    tools:context="smikhlevskiy.uafinance.UI.OrganizationActivity">

    <LinearLayout
        android:id="@+id/layoutName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/organization_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/organization_title" />

        <TextView
            android:id="@+id/organization_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
           android:text="Приветбанк" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutCity"
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:layout_below="@+id/layoutName"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/organization_text_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/organization_city" />

        <TextView
            android:id="@+id/organization_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"

            android:text="Бердычев" />


        <TextView
            android:id="@+id/organization_region"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:lines="1"
            android:text="Житомирская область" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutAdress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layoutCity"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/organization_text_adress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/organization_adress_text" />

        <TextView
            android:id="@+id/organization_adress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:text="ул.Ленина,2" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutLink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layoutAdress"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/organization_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:text="http://google.com.ua" />


    </LinearLayout>


</RelativeLayout>
